And use the same variable name

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -53,7 +53,7 @@ jobs:
             ## Linting report
 
             ```
-              ${{ steps.lint.outputs.PYLINT }}
+              ${{ steps.lint.outputs.LINTING }}
             ```
 
             ## Security Report
