--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -35,16 +35,16 @@ jobs:
         # Awk expression - replace newlines with chars in ORS.
         # Or true so we get the report, but not gating.
         run: |
-          linting_output="$(pylint demo.py 2>&1 || true)"
-          echo ${linting_output}
-          echo "::set-output name=LINTING::$(echo ${linting_output} | awk 1 ORS='\\n')"
+          linting_output="$(pylint demo.py 2>&1 | awk 1 ORS='\\n')"
+          echo -e "${linting_output}"
+          echo "::set-output name=LINTING::${linting_output}"
 
       - name: Security linting report
         id: security_lint
         run: |
-          linting_output="$(bandit demo.py 2>&1 || true)"
-          echo ${linting_output}
-          echo "::set-output name=BANDIT::$(echo ${linting_output} | awk 1 ORS='\\n')"
+          linting_output="$(bandit demo.py 2>&1 | awk 1 ORS='\\n')"
+          echo -e "${linting_output}"
+          echo "::set-output name=BANDIT::${linting_output}"
 
       - name: Attach this as a comment
         uses: mshick/add-pr-comment@v1
