--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,56 @@
-asgiref==3.4.1
+astroid==2.9.0
 backoff==1.10.0
-boto3==1.18.9
-botocore==1.21.9
-certifi==2021.5.30
-charset-normalizer==2.0.3
-click==8.0.1
-Deprecated==1.2.12
-Flask==2.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.9
+click==8.0.3
+Deprecated==1.2.13
+Flask==2.0.2
 googleapis-common-protos==1.53.0
-grpcio==1.39.0
-idna==3.2
+greenlet==1.1.2
+grpcio==1.42.0
+idna==3.3
+isort==5.10.1
 itsdangerous==2.0.1
-Jinja2==3.0.1
-jmespath==0.10.0
+Jinja2==3.0.3
+lazy-object-proxy==1.6.0
 MarkupSafe==2.0.1
-opentelemetry-api==1.4.1
-opentelemetry-distro==0.23b2
-opentelemetry-exporter-otlp==1.4.1
-opentelemetry-exporter-otlp-proto-grpc==1.4.1
-opentelemetry-instrumentation==0.23b2
-opentelemetry-instrumentation-botocore==0.23b2
-opentelemetry-instrumentation-dbapi==0.23b2
-opentelemetry-instrumentation-flask==0.23b2
-opentelemetry-instrumentation-grpc==0.23b2
-opentelemetry-instrumentation-logging==0.23b2
-opentelemetry-instrumentation-requests==0.23b2
-opentelemetry-instrumentation-sqlite3==0.23b2
-opentelemetry-instrumentation-urllib==0.23b2
-opentelemetry-instrumentation-wsgi==0.23b2
-opentelemetry-proto==1.4.1
-opentelemetry-sdk==1.4.1
-opentelemetry-sdk-extension-aws==0.23b2
-opentelemetry-semantic-conventions==0.23b2
-opentelemetry-util-http==0.23b2
-prometheus-client==0.11.0
-prometheus-flask-exporter==0.18.2
-protobuf==3.17.3
-python-dateutil==2.8.2
+mccabe==0.6.1
+opentelemetry-api==1.7.1
+opentelemetry-exporter-otlp==1.7.1
+opentelemetry-exporter-otlp-proto-grpc==1.7.1
+opentelemetry-exporter-otlp-proto-http==1.7.1
+opentelemetry-instrumentation==0.26b1
+opentelemetry-instrumentation-aws-lambda==0.26b1
+opentelemetry-instrumentation-dbapi==0.26b1
+opentelemetry-instrumentation-flask==0.26b1
+opentelemetry-instrumentation-grpc==0.26b1
+opentelemetry-instrumentation-jinja2==0.26b1
+opentelemetry-instrumentation-logging==0.26b1
+opentelemetry-instrumentation-requests==0.26b1
+opentelemetry-instrumentation-sqlite3==0.26b1
+opentelemetry-instrumentation-urllib==0.26b1
+opentelemetry-instrumentation-urllib3==0.26b1
+opentelemetry-instrumentation-wsgi==0.26b1
+opentelemetry-propagator-aws-xray==1.0.1
+opentelemetry-proto==1.7.1
+opentelemetry-sdk==1.7.1
+opentelemetry-semantic-conventions==0.26b1
+opentelemetry-util-http==0.26b1
+packaging==21.3
+platformdirs==2.4.0
+prometheus-client==0.12.0
+prometheus-flask-exporter==0.18.6
+protobuf==3.19.1
+pylint==2.12.2
+pyparsing==3.0.6
+python-json-logger==2.0.2
+python-logging-loki==0.3.1
 requests==2.26.0
-s3transfer==0.5.0
+rfc3339==6.2
 six==1.16.0
-urllib3==1.26.6
-Werkzeug==2.0.1
-wrapt==1.12.1
-
+SQLAlchemy==1.4.27
+toml==0.10.2
+typing-extensions==4.0.1
+urllib3==1.26.7
+Werkzeug==2.0.2
+wrapt==1.13.3
