--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,21 +28,21 @@ jobs:
         run: pip install pylint bandit
 
       - name: Code Errors Lint
-        run: pylint --errors-only demo.py
+        run: pylint --errors-only app.py
 
       - name: Code Linting report
         id: lint
         # Awk expression - replace newlines with chars in ORS.
         # Or true so we get the report, but not gating.
         run: |
-          linting_output="$(pylint demo.py 2>&1 | awk 1 ORS='\\n')"
+          linting_output="$(pylint app.py 2>&1 | awk 1 ORS='\\n')"
           echo -e "${linting_output}"
           echo "::set-output name=LINTING::${linting_output//$'\\n'/'%0A'}"
 
       - name: Security linting report
         id: security_lint
         run: |
-          linting_output="$(bandit demo.py 2>&1 | awk 1 ORS='\\n')"
+          linting_output="$(bandit app.py 2>&1 | awk 1 ORS='\\n')"
           echo -e "${linting_output}"
           echo "::set-output name=BANDIT::${linting_output//$'\\n'/'%0A'}"
 
